Test inline jest

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "webpack -dw",
     "start": "node server/index.js",
     "test": "jest --coverage",
-    "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "test:coverage": "jest -i --coverage && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint --ext .js --ext .jsx ."
   },
   "dependencies": {
